# impetus

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package.json  taplo.toml
.github/workflows/: docs.yml  rust.yml
blockchain/: package.json
blockchain/frontier/client/cli/: Cargo.toml
blockchain/frontier/client/cli/src/frontier_db_cmd/: tests.rs
blockchain/frontier/client/rpc-core/src/types/: bytes.rs  index.rs
blockchain/frontier/client/rpc/src/eth/cache/: lru_cache.rs
blockchain/frontier/frame/ethereum/src/tests/: eip1559.rs
blockchain/frontier/frame/evm/precompile/blake2/src/: lib.rs
blockchain/frontier/frame/evm/precompile/bn128/src/: lib.rs
blockchain/frontier/frame/evm/precompile/ed25519/src/: lib.rs
blockchain/frontier/frame/evm/precompile/simple/src/: lib.rs
blockchain/frontier/frame/evm/src/: tests.rs
blockchain/frontier/precompiles/utils/macro/src/precompile/: expand.rs
blockchain/frontier/precompiles/utils/macro/tests/: precompile.rs  tests.rs
blockchain/frontier/precompiles/utils/src/: lib.rs  modifier.rs  substrate.rs  tests.rs
blockchain/lottery/src/: weights.rs
blockchain/node/: Cargo.toml
blockchain/node/src/: rpc.rs
blockchain/pallets/betting/src/: lib.rs
blockchain/pallets/lottery/: Cargo.toml
blockchain/pallets/lottery/src/: benchmarking.rs  lib.rs  mock.rs
blockchain/pallets/lucky-number/src/: lib.rs
blockchain/precompiles/betting/: Cargo.toml
blockchain/primitives/: Cargo.toml
blockchain/runtime/impetus/: Cargo.toml
blockchain/runtime/impetus/src/: lib.rs
commons/: Cargo.toml
commons/src/: data_type.rs  lib.rs  pre_deploy_contracts.rs
commons/src/pre-deploy-contracts/: 1820registry  multicall2  multicall3
contracts/batch/: Cargo.toml
contracts/batch/src/: lib.rs  mock.rs  tests.rs
contracts/did/: Cargo.toml
contracts/did/src/: lib.rs
contracts/giveaway/: Cargo.toml  Giveaway.sol
contracts/giveaway/src/: lib.rs
contracts/lucky-number/: Cargo.toml  LuckyNumber.sol
contracts/lucky-number/src/: lib.rs
docs/: node-template-release.md
evm-contracts/: hardhat.config.ts  package.json
evm-contracts/contracts/: BettingInterface.sol
evm-contracts/scripts/: bet.ts
frontier/client/cli/: Cargo.toml
frontier/client/cli/src/frontier_db_cmd/: tests.rs
frontier/client/db/src/: upgrade.rs
frontier/client/rpc-core/src/types/: block_number.rs  filter.rs
frontier/client/rpc/src/: lib.rs
frontier/frame/base-fee/src/: tests.rs
frontier/frame/dynamic-fee/src/: tests.rs
frontier/frame/ethereum/src/tests/: eip2930.rs  legacy.rs
frontier/frame/evm/precompile/curve25519/src/: lib.rs
frontier/frame/evm/precompile/dispatch/src/: tests.rs
frontier/frame/evm/precompile/modexp/src/: lib.rs
frontier/frame/evm/precompile/sha3fips/src/: lib.rs
frontier/frame/evm/src/: lib.rs
frontier/frame/evm/src/runner/: mod.rs  stack.rs
frontier/frame/hotfix-sufficients/src/: tests.rs  weights.rs
frontier/precompiles/utils/: Cargo.toml
frontier/precompiles/utils/macro/: Cargo.toml
frontier/precompiles/utils/macro/src/: generate_function_selector.rs  lib.rs
frontier/precompiles/utils/macro/src/precompile/: mod.rs  parse.rs
frontier/precompiles/utils/macro/tests/: tests.rs
frontier/precompiles/utils/macro/tests/precompile/compile-fail/discriminant/: dont-return-option.stderr  missing-fn.stderr  missing-param.stderr  too-many-arguments.stderr  type-mismatch-1.stderr  type-mismatch-2.stderr
frontier/precompiles/utils/macro/tests/precompile/compile-fail/evm-data/: no-output.stderr  output-not-result.stderr  output-wrong-error-result.stderr
frontier/precompiles/utils/macro/tests/precompile/compile-fail/fn-modifiers/: discriminant-multiple.stderr  multiple-modifiers.stderr  pre-check-multiple.stderr
frontier/precompiles/utils/macro/tests/precompile/compile-fail/handle/: missing.stderr  set-missing.stderr  set-wrong-type.stderr  wrong-type.stderr
frontier/precompiles/utils/macro/tests/precompile/compile-fail/pre-check/: no-parameter.stderr  too-many-parameters.stderr  wrong-parameter.stderr
frontier/precompiles/utils/macro/tests/precompile/compile-fail/test/: generic-arg.rs  generic-arg.stderr
frontier/precompiles/utils/macro/tests/precompile/expand/: precompile.expanded.rs  precompileset.expanded.rs
frontier/precompiles/utils/macro/tests/precompile/pass/: fn-modifiers.rs
frontier/precompiles/utils/src/: handle.rs  logs.rs  precompile_set.rs  revert.rs  tests.rs
frontier/precompiles/utils/src/data/: bytes.rs  mod.rs  native.rs  xcm.rs
frontier/primitives/evm/src/: validation.rs
hardhat/: package.json
hardhat/contracts/: LuckyNumberInterface.sol
hardhat/scripts/: bet.ts
lottery/: Cargo.toml
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  client.rs  command.rs  eth.rs  rpc.rs  service.rs
node/src/rpc/: eth.rs  mod.rs
pallets/betting/: Cargo.toml
pallets/betting/src/: lib.rs
pallets/did/: Cargo.toml
pallets/did/src/: lib.rs
pallets/give-away/: Cargo.toml
pallets/give-away/src/: lib.rs
pallets/giveaway/src/: lib.rs
pallets/lucky-number/: Cargo.toml
pallets/lucky-number/src/: lib.rs
precompiles/betting/src/: lib.rs
precompiles/lucky-number/: Cargo.toml
precompiles/lucky-number/src/: lib.rs
precompiles/utils/macro/src/precompile/: expand.rs  parse.rs
precompiles/utils/macro/tests/: tests.rs
precompiles/utils/macro/tests/expand/: precompileset.expanded.rs
precompiles/utils/src/: lib.rs  precompile_set.rs  substrate.rs
precompiles/utils/src/evm/: handle.rs
precompiles/utils/src/solidity/codec/: xcm.rs
precompiles/utils/src/testing/: handle.rs
precompiles/utils/tests-external/: lib.rs
primitives/src/: assets.rs  lib.rs  lottery.rs  pre_deploy_contracts.rs
runtime/: Cargo.toml
runtime/impetus/: Cargo.toml
runtime/impetus/src/: constants.rs  lib.rs  precompiles.rs
runtime/impulse/: Cargo.toml
runtime/impulse/src/: lib.rs
runtime/src/: constants.rs  lib.rs  precompiles.rs
scripts/: benchmark.sh
(+3 files in other folders)
