[package]
name = "commons"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-core = {workspace = true }
sp-runtime = {workspace = true }

[features]
default = ["std"]
std = [
    "sp-core/std",
    "sp-runtime/std",
]
