[package]
name = "pallet-evm-precompile-lucky-number"
authors = [ "paritytech" ]
description = "A Precompile for pallet-lucky-number"
edition = "2021"
version = "1.0.0"

[dependencies]
array-bytes = "6.0.0"
log = "0.4"
num_enum = { version = "0.5.3", default-features = false }
rustc-hex = { version = "2.0.1", default-features = false }

# Impetus
pallet-lucky-number = { path = "../../pallets/lucky-number", default-features = false }
precompile-utils = { path = "../../frontier/precompiles/utils", default-features = false }

# Substrate
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [ "max-encoded-len" ] }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
sp-io = { version = "7.0.0",git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36", default-features = false }


# Frontier
fp-evm = { path = "../../frontier/primitives/evm", default-features = false }
pallet-evm = { path = "../../frontier/frame/evm", default-features = false }

[dev-dependencies]
derive_more = "0.99"
serde = "1.0.100"
sha3 = "0.10.6"

# Moonbeam
precompile-utils = { path = "../../frontier/precompiles/utils", features = [ "testing" ] }

# Substrate
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
scale-info = { version = "2.0", default-features = false, features = [ "derive" ] }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-lucky-number/std",
	"precompile-utils/std",
	"sp-core/std",
	"sp-std/std",
]
